I18n of menu mnemonics

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,18 +14,28 @@ InitView.6=<html>This archive needs to be linked to a Google account and a devic
 InitView.7=Credentials
 InitView.8=Username:
 InitView.9=Password:
+MainActivity.0=alt F
 MainActivity.1=File
 MainActivity.10=Contents
 MainActivity.11=Raccoon
 MainActivity.12=http://www.onyxbits.de/raccoon/handbook
 MainActivity.13=Really close?
 MainActivity.14=Downloads in progress
+MainActivity.15=alt V 
 MainActivity.16=Archive setup
 MainActivity.17=Search
 MainActivity.18=Downloads
 MainActivity.19=Really quit?
 MainActivity.2=Exit
 MainActivity.20=Downloads in progress
+MainActivity.21=alt H
+MainActivity.22=alt X
+MainActivity.23=alt O
+MainActivity.24=alt C
+MainActivity.25=alt U
+MainActivity.26=alt S
+MainActivity.27=alt D
+MainActivity.28=alt C
 MainActivity.3=Open archive
 MainActivity.4=Close
 MainActivity.5=Updates
