--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -9,10 +9,11 @@ InitView.12=Falsche Zugangsdaten
 InitView.13=Login... (Bitte warten)
 InitView.4=Login
 InitView.5=Hilfe
-InitView.6=<html>Dieses Archiv muss mit einem Google Konto verbunden werden. Benutzername und Passwort werden ben\u00f6tigt, die Android ID ist optional und kann leer gelassen werden (siehe Hilfe).</html>
+InitView.6=<html>Dieses Archiv muss mit einem Google Konto verbunden werden. Benutzername und Passwort werden ben\u00F6tigt, die Android ID ist optional und kann leer gelassen werden (siehe Hilfe).</html>
 InitView.7=Zugangsdaten
 InitView.8=Benutzername:
 InitView.9=Passwort:
+MainActivity.0=alt D
 MainActivity.1=Datei
 MainActivity.10=Inhalt
 MainActivity.12=http://www.onyxbits.de/raccoon/handbook
@@ -22,9 +23,18 @@ MainActivity.16=Archiv einrichten
 MainActivity.17=Suche
 MainActivity.18=Transfers
 MainActivity.19=Wirklich beenden?
+MainActivity.15=alt A
 MainActivity.2=Beenden
 MainActivity.20=Dateitransfers
-MainActivity.3=Archiv \u00f6ffnen
+MainActivity.21=alt H
+MainActivity.22=alt E
+MainActivity.23=alt F
+MainActivity.24=alt C
+MainActivity.25=alt U
+MainActivity.26=alt S
+MainActivity.27=alt T
+MainActivity.28=alt I
+MainActivity.3=Archiv \u00F6ffnen
 MainActivity.4=Schliessen
 MainActivity.6=Ansicht
 MainActivity.7=Suche
@@ -39,13 +49,13 @@ ResultView.87=Mikrophon Zugang
 ResultView.88=Kamera Zugang
 ResultView.89=Telephon Zugang
 ResultView.90=Ssystem Zugang
-ResultView.91=Pers\u00f6hnliche Daten Zugang
+ResultView.91=Pers\u00F6hnliche Daten Zugang
 ResultView.92=Speicherkarten Zugang
-SearchView.3=Schl\u00fcsselwort oder app id
+SearchView.3=Schl\u00FCsselwort oder app id
 SearchView.4=Ergebnis seite
 SearchView.5=Suche
-SearchView.6=Schl\u00fcsselworte, Herstellername oder app id ben\u00f6tigt.
-SearchView.7=Datei \u00fcberschreiben?
+SearchView.6=Schl\u00FCsselworte, Herstellername oder app id ben\u00F6tigt.
+SearchView.7=Datei \u00FCberschreiben?
 SearchView.8=Datei existiert
 SearchWorker.0=Suche abgebrochen
 SearchWorker.1=Passwortfahler
