Added 'Open' button to the download view to directly open the APK folder in a filemanager.

--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -1,6 +1,7 @@
 DownloadView.0=Cancel
 DownloadView.1=Waiting
 DownloadView.10=Cancelled
+DownloadView.2=Open
 DownloadView.7=Complete
 DownloadView.8=Not paid for
 DownloadView.9=Error\!
