--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -1,5 +1,6 @@
 DownloadView.0=Abbrechen
 DownloadView.1=Warte
+DownloadView.2=\u00d6ffnen
 DownloadView.10=Abgebrochen
 DownloadView.7=Fertig
 DownloadView.8=Nicht bezahlt
