Don't put scatter archives around whereever the user happens to start the application. Instead, contain stuff (by default) in a 'Raccoon' directory in the users homedir.

--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -18,7 +18,7 @@ InitView.9=Password:
 MainActivity.0=alt F
 MainActivity.1=File
 MainActivity.10=Contents
-MainActivity.11=Raccoon
+MainActivity.11=default
 MainActivity.12=http://www.onyxbits.de/raccoon/handbook
 MainActivity.13=Really close?
 MainActivity.14=Downloads in progress
