Added 'New archive' menu item.

--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -37,7 +37,11 @@ MainActivity.25=alt U
 MainActivity.26=alt S
 MainActivity.27=alt D
 MainActivity.28=alt C
+MainActivity.29=New Archive
+MainActivity.30=N
 MainActivity.3=Open archive
+MainActivity.31=New Archive
+MainActivity.32=Name
 MainActivity.4=Close
 MainActivity.5=Updates
 MainActivity.6=View
