--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -1,6 +1,6 @@
 DownloadView.0=Abbrechen
 DownloadView.1=Warte
-DownloadView.2=\u00d6ffnen
+DownloadView.2=\u00D6ffnen
 DownloadView.10=Abgebrochen
 DownloadView.7=Fertig
 DownloadView.8=Nicht bezahlt
@@ -35,6 +35,9 @@ MainActivity.25=alt U
 MainActivity.26=alt S
 MainActivity.27=alt T
 MainActivity.28=alt I
+MainActivity.29=Neues Archiv
+MainActivity.30=N
+MainActivity.31=Neues Archiv
 MainActivity.3=Archiv \u00F6ffnen
 MainActivity.4=Schliessen
 MainActivity.6=Ansicht
