Use HTML pane for displaying the message.

--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -58,7 +58,7 @@ ResultView.92=Speicherkarten Zugang
 SearchView.3=Schl\u00FCsselwort oder app id
 SearchView.4=Ergebnis seite
 SearchView.5=Suche
-SearchView.6=Schl\u00FCsselworte, Herstellername oder app id ben\u00F6tigt.
+SearchView.6=Suchbegriff, Herstellername oder app id ben\u00F6tigt.
 SearchView.7=Datei \u00FCberschreiben?
 SearchView.8=Datei existiert
 SearchWorker.0=Suche abgebrochen
