Use a template engine to generate HTML test instead of stitching it together in java code.

--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -48,16 +48,21 @@ MainActivity.6=View
 MainActivity.7=Search
 MainActivity.8=Downloads
 MainActivity.9=Help
-ResultView.21=This app requires no permissions
+ResultView.1=Installations
+ResultView.22=No permissions declared.
 ResultView.25=Download
 ResultView.26=Google Play
 ResultView.27=Permissions
+ResultView.3=Rating
+ResultView.5=Price
+ResultView.7=Published
 ResultView.84=Internet access
 ResultView.85=In App Purchases
 ResultView.86=Location access
 ResultView.87=Microphone access
 ResultView.88=Camera access
 ResultView.89=Telephone access
+ResultView.9=Size
 ResultView.90=System access
 ResultView.91=Personal data access
 ResultView.92=Storage access
