--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -44,7 +44,12 @@ MainActivity.6=Ansicht
 MainActivity.7=Suche
 MainActivity.8=Transfers
 MainActivity.9=Hilfe
-ResultView.21=Keine Berechtigungen deklariert
+ResultView.1=Installationen
+ResultView.3=Bewertung
+ResultView.5=Preis
+ResultView.7=Ver\u00F6ffentlicht
+ResultView.9=Gr\u00F6\u00dfe
+ResultView.22=Keine Berechtigungen deklariert
 ResultView.27=Berechtigungen
 ResultView.84=Internet Zugang
 ResultView.85=In App Einkauf
@@ -52,7 +57,7 @@ ResultView.86=Ortsbestimmung
 ResultView.87=Mikrophon Zugang
 ResultView.88=Kamera Zugang
 ResultView.89=Telephon Zugang
-ResultView.90=Ssystem Zugang
+ResultView.90=System Zugang
 ResultView.91=Pers\u00F6hnliche Daten Zugang
 ResultView.92=Speicherkarten Zugang
 SearchView.3=Schl\u00FCsselwort oder app id
