--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -49,7 +49,7 @@ ResultView.3=Bewertung
 ResultView.5=Preis
 ResultView.7=Ver\u00F6ffentlicht
 ResultView.9=Gr\u00F6\u00dfe
-ResultView.22=Keine Berechtigungen deklariert
+ResultView.22=Keine Berechtigungen deklariert.
 ResultView.27=Berechtigungen
 ResultView.84=Internet Zugang
 ResultView.85=In App Einkauf
