Toggle icon loading from the views menu.

--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -42,6 +42,7 @@ MainActivity.30=N
 MainActivity.3=Open archive
 MainActivity.31=New Archive
 MainActivity.32=Name
+MainActivity.34=Fetch icons
 MainActivity.4=Close
 MainActivity.5=Updates
 MainActivity.6=View
