--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -38,6 +38,7 @@ MainActivity.28=alt I
 MainActivity.29=Neues Archiv
 MainActivity.30=N
 MainActivity.31=Neues Archiv
+MainActivity.34=Icons laden
 MainActivity.3=Archiv \u00F6ffnen
 MainActivity.4=Schliessen
 MainActivity.6=Ansicht
@@ -48,7 +49,7 @@ ResultView.1=Installationen
 ResultView.3=Bewertung
 ResultView.5=Preis
 ResultView.7=Ver\u00F6ffentlicht
-ResultView.9=Gr\u00F6\u00dfe
+ResultView.9=Gr\u00F6\u00DFe
 ResultView.22=Keine Berechtigungen deklariert.
 ResultView.27=Berechtigungen
 ResultView.84=Internet Zugang
