Show a splash screen when opening an archive

--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -62,11 +62,16 @@ ResultView.90=System Zugang
 ResultView.91=Pers\u00F6hnliche Daten Zugang
 ResultView.92=Speicherkarten Zugang
 SearchView.3=Schl\u00FCsselwort oder app id
-SearchView.4=Ergebnis seite
+SearchView.4=Ergebnis Seite
 SearchView.5=Suche
 SearchView.6=Suchbegriff, Herstellername oder app id ben\u00F6tigt.
 SearchView.7=Datei \u00FCberschreiben?
 SearchView.8=Datei existiert
+SearchView.10=Letzte Downloads
+SearchView.12=Keine
+SearchView.2=Letzte Neuigkeiten
+SearchView.1=Anzahl der Apps
+SearchView.11=Aktuelles Archiv
 SearchWorker.0=Suche abgebrochen
 SearchWorker.1=Passwortfahler
 SearchWorker.2=Keine Updates
