--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -67,7 +67,7 @@ ResultView.9=Size
 ResultView.90=System access
 ResultView.91=Personal data access
 ResultView.92=Storage access
-SearchView.1=Number of apps
+SearchView.1=Stored apps
 SearchView.10=Latest downloads
 SearchView.11=Current archive
 SearchView.12=none
