--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -70,7 +70,7 @@ SearchView.8=Datei existiert
 SearchView.10=Letzte Downloads
 SearchView.12=Keine
 SearchView.2=Letzte Neuigkeiten
-SearchView.1=Anzahl der Apps
+SearchView.1=Gespeicherte Apps
 SearchView.11=Aktuelles Archiv
 SearchWorker.0=Suche abgebrochen
 SearchWorker.1=Passwortfahler
