Added the 'details' button to an app entry and in consequence restructured half of the ResultView. Details and Permissions are now toggles that add or remove data to the model. This simplifies matterrs greatly as only one template is needed now. Also the controlpanel switched sides. This is the easiest way to ensure buttons stay put if the textpanel needs to change its size.

--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -50,12 +50,14 @@ MainActivity.7=Search
 MainActivity.8=Downloads
 MainActivity.9=Help
 ResultView.1=Installations
+ResultView.2=Version
 ResultView.22=No permissions declared.
 ResultView.25=Download
 ResultView.26=Google Play
 ResultView.27=Permissions
 ResultView.3=Rating
 ResultView.5=Price
+ResultView.6=Details
 ResultView.7=Published
 ResultView.84=Internet access
 ResultView.85=In App Purchases
