Show 'recent changes' when available

--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -47,6 +47,7 @@ MainActivity.8=Transfers
 MainActivity.9=Hilfe
 ResultView.1=Installationen
 ResultView.3=Bewertung
+ResultView.4=Letzte \u00c4nderungen
 ResultView.5=Preis
 ResultView.7=Ver\u00F6ffentlicht
 ResultView.9=Gr\u00F6\u00DFe
