--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -56,6 +56,7 @@ ResultView.25=Download
 ResultView.26=Google Play
 ResultView.27=Permissions
 ResultView.3=Rating
+ResultView.4=Recent changes
 ResultView.5=Price
 ResultView.6=Details
 ResultView.7=Published
