Added a new badge for apps that want to do license checks.

--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -49,6 +49,7 @@ MainActivity.6=View
 MainActivity.7=Search
 MainActivity.8=Downloads
 MainActivity.9=Help
+ResultView.0=Online License Check
 ResultView.1=Installations
 ResultView.2=Version
 ResultView.22=No permissions declared.
