--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -45,6 +45,7 @@ MainActivity.6=Ansicht
 MainActivity.7=Suche
 MainActivity.8=Transfers
 MainActivity.9=Hilfe
+ResultView.0=Online Lizenzpr\u00fcfung
 ResultView.1=Installationen
 ResultView.3=Bewertung
 ResultView.4=Letzte \u00c4nderungen
