--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -75,6 +75,6 @@ SearchView.2=Letzte Neuigkeiten
 SearchView.1=Gespeicherte Apps
 SearchView.11=Aktuelles Archiv
 SearchWorker.0=Suche abgebrochen
-SearchWorker.1=Passwortfahler
+SearchWorker.1=Passwortfehler
 SearchWorker.2=Keine Updates
 SearchWorker.3=Keine Ergebnisse
