Added cancel button to the search screen

--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -71,6 +71,7 @@ ResultView.9=Size
 ResultView.90=System access
 ResultView.91=Personal data access
 ResultView.92=Storage access
+SearchView.0=Cancel
 SearchView.1=Stored apps
 SearchView.10=Latest downloads
 SearchView.11=Current archive
@@ -82,7 +83,6 @@ SearchView.5=Searching
 SearchView.6=Enter keywords, app name, vendor name, app id or a Google Play url
 SearchView.7=Overwrite file?
 SearchView.8=File exists
-SearchWorker.0=Search aborted
 SearchWorker.1=Authentication error
 SearchWorker.2=No updates
 SearchWorker.3=No results
