--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -45,10 +45,10 @@ MainActivity.6=Ansicht
 MainActivity.7=Suche
 MainActivity.8=Transfers
 MainActivity.9=Hilfe
-ResultView.0=Online Lizenzpr\u00fcfung
+ResultView.0=Online Lizenzpr\u00FCfung
 ResultView.1=Installationen
 ResultView.3=Bewertung
-ResultView.4=Letzte \u00c4nderungen
+ResultView.4=Letzte \u00C4nderungen
 ResultView.5=Preis
 ResultView.7=Ver\u00F6ffentlicht
 ResultView.9=Gr\u00F6\u00DFe
@@ -63,6 +63,7 @@ ResultView.89=Telephon Zugang
 ResultView.90=System Zugang
 ResultView.91=Pers\u00F6hnliche Daten Zugang
 ResultView.92=Speicherkarten Zugang
+SearchView.0=Abbrechen
 SearchView.3=Schl\u00FCsselwort oder app id
 SearchView.4=Ergebnis Seite
 SearchView.5=Suche
@@ -74,7 +75,6 @@ SearchView.12=Keine
 SearchView.2=Letzte Neuigkeiten
 SearchView.1=Gespeicherte Apps
 SearchView.11=Aktuelles Archiv
-SearchWorker.0=Suche abgebrochen
 SearchWorker.1=Passwortfehler
 SearchWorker.2=Keine Updates
 SearchWorker.3=Keine Ergebnisse
