Added the ability to export an archive as a list of market urls.

--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -42,7 +42,10 @@ MainActivity.30=N
 MainActivity.3=Open archive
 MainActivity.31=New Archive
 MainActivity.32=Name
+MainActivity.33=Export
 MainActivity.34=Fetch icons
+MainActivity.35=alt P
+MainActivity.38=List copied to clipboard
 MainActivity.4=Close
 MainActivity.5=Updates
 MainActivity.6=View
