--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -39,6 +39,9 @@ MainActivity.29=Neues Archiv
 MainActivity.30=N
 MainActivity.31=Neues Archiv
 MainActivity.34=Icons laden
+MainActivity.33=Exportieren
+MainActivity.35=alt P
+MainActivity.38=Liste in die Zwischenablage kopiert
 MainActivity.3=Archiv \u00F6ffnen
 MainActivity.4=Schliessen
 MainActivity.6=Ansicht
