Added import function.

--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -42,6 +42,10 @@ MainActivity.34=Icons laden
 MainActivity.33=Exportieren
 MainActivity.35=alt P
 MainActivity.38=Liste in die Zwischenablage kopiert
+MainActivity.36=Importieren
+MainActivity.37=alt M
+MainActivity.39=\ Apps gefunden und vorgemerkt. Download \u00fcber die Update Funktion.
+MainActivity.40=Die Zwischenablage muss eine Liste von market:// Urls enthalten (selbes Format wie bei der Exportfunktion).
 MainActivity.3=Archiv \u00F6ffnen
 MainActivity.4=Schliessen
 MainActivity.6=Ansicht
