--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -45,8 +45,12 @@ MainActivity.32=Name
 MainActivity.33=Export
 MainActivity.34=Fetch icons
 MainActivity.35=alt P
+MainActivity.36=Import
+MainActivity.37=alt M
 MainActivity.38=List copied to clipboard
+MainActivity.39=\ Apps found and marked. Update the archive to download.
 MainActivity.4=Close
+MainActivity.40=The clipboard must contain a list of market urls. One url per line (same as export format).
 MainActivity.5=Updates
 MainActivity.6=View
 MainActivity.7=Search
