Menuitems should be phrased as a command.

--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -51,7 +51,7 @@ MainActivity.38=List copied to clipboard
 MainActivity.39=\ Apps found and marked. Update the archive to download.
 MainActivity.4=Close
 MainActivity.40=The clipboard must contain a list of market urls. One url per line (same as export format).
-MainActivity.5=Updates
+MainActivity.5=Update
 MainActivity.6=View
 MainActivity.7=Search
 MainActivity.8=Downloads
