--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -48,9 +48,12 @@ MainActivity.35=alt P
 MainActivity.36=Import
 MainActivity.37=alt M
 MainActivity.38=List copied to clipboard
-MainActivity.39=\ Apps found and marked. Update the archive to download.
+MainActivity.39=Update the archive to download.
 MainActivity.4=Close
 MainActivity.40=The clipboard must contain a list of market urls. One url per line (same as export format).
+MainActivity.41=Apps to import:
+MainActivity.42=Please confirm
+MainActivity.43=No new ids found in the clipboard.
 MainActivity.5=Update
 MainActivity.6=View
 MainActivity.7=Search
