--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -50,7 +50,7 @@ MainActivity.37=alt M
 MainActivity.38=List copied to clipboard
 MainActivity.39=Update the archive to download.
 MainActivity.4=Close
-MainActivity.40=The clipboard must contain a list of market urls. One url per line (same as export format).
+MainActivity.40=The clipboard must contain a list of market urls. One url per line (same as export format). Use <a href=\"https://play.google.com/store/apps/details?id=de.onyxbits.listmyapps\">List My Apps</a> to import from a device.
 MainActivity.41=Apps to import:
 MainActivity.42=Please confirm
 MainActivity.43=No new ids found in the clipboard.
