--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -44,8 +44,8 @@ MainActivity.35=alt P
 MainActivity.38=Liste in die Zwischenablage kopiert
 MainActivity.36=Importieren
 MainActivity.37=alt M
-MainActivity.39=Download \u00fcber die Update Funktion.
-MainActivity.40=Die Zwischenablage muss eine Liste von market:// Urls enthalten (selbes Format wie bei der Exportfunktion).
+MainActivity.39=Download \u00FCber die Update Funktion.
+MainActivity.40=Die Zwischenablage muss eine Liste von market:// Urls enthalten (selbes Format wie bei der Exportfunktion). Eine Liste kann mit <a href=\"https://play.google.com/store/apps/details?id=de.onyxbits.listmyapps\">List My Apps</a> erstellt werden.
 MainActivity.3=Archiv \u00F6ffnen
 MainActivity.4=Schliessen
 MainActivity.6=Ansicht
@@ -53,7 +53,7 @@ MainActivity.7=Suche
 MainActivity.8=Transfers
 MainActivity.9=Hilfe
 MainActivity.41=Apps zum importieren:
-MainActivity.42=Bitte best\u00e4tigen
+MainActivity.42=Bitte best\u00E4tigen
 MainActivity.43=Keine neuen Apps zum importieren in der Zwischenablage gefunden. 
 ResultView.0=Online Lizenzpr\u00FCfung
 ResultView.1=Installationen
