Made the import dialog more compfortable: the user can now select which apps to import.

--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -53,7 +53,7 @@ MainActivity.7=Suche
 MainActivity.8=Transfers
 MainActivity.9=Hilfe
 MainActivity.41=Apps zum importieren:
-MainActivity.42=Bitte best\u00E4tigen
+MainActivity.42=Import best\u00E4tigen
 MainActivity.43=Keine neuen Apps zum importieren in der Zwischenablage gefunden. 
 ResultView.0=Online Lizenzpr\u00FCfung
 ResultView.1=Installationen
