--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -52,7 +52,7 @@ MainActivity.39=Update the archive to download.
 MainActivity.4=Close
 MainActivity.40=The clipboard must contain a list of market urls. One url per line (same as export format). Use <a href=\"https://play.google.com/store/apps/details?id=de.onyxbits.listmyapps\">List My Apps</a> to import from a device.
 MainActivity.41=Apps to import:
-MainActivity.42=Please confirm
+MainActivity.42=Confirm import
 MainActivity.43=No new ids found in the clipboard.
 MainActivity.5=Update
 MainActivity.6=View
