Message screen handles market:// urls

--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -45,7 +45,7 @@ MainActivity.38=Liste in die Zwischenablage kopiert
 MainActivity.36=Importieren
 MainActivity.37=alt M
 MainActivity.39=Download \u00FCber die Update Funktion.
-MainActivity.40=Die Zwischenablage muss eine Liste von market:// Urls enthalten (selbes Format wie bei der Exportfunktion). Eine Liste kann auf einem Ger\u00e4t mittels <a href=\"https://play.google.com/store/apps/details?id=de.onyxbits.listmyapps\">List My Apps</a> erstellt werden.
+MainActivity.40=Die Zwischenablage muss eine Liste von market\:// Urls enthalten (selbes Format wie bei der Exportfunktion). Eine Liste kann auf einem Ger\u00E4t mittels <a href\="market\://details?id\=de.onyxbits.listmyapps">List My Apps</a> erstellt werden.
 MainActivity.3=Archiv \u00F6ffnen
 MainActivity.4=Schliessen
 MainActivity.6=Ansicht
