Show the current accountname on the splash screen.

--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -86,6 +86,7 @@ SearchView.1=Stored apps
 SearchView.10=Latest downloads
 SearchView.11=Current archive
 SearchView.12=none
+SearchView.15=Account
 SearchView.2=Latest news
 SearchView.3=Keywords or packagename
 SearchView.4=Result page
