--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -82,6 +82,7 @@ SearchView.7=Datei \u00FCberschreiben?
 SearchView.8=Datei existiert
 SearchView.10=Letzte Downloads
 SearchView.12=Keine
+SearchView.15=Konto
 SearchView.2=Letzte Neuigkeiten
 SearchView.1=Gespeicherte Apps
 SearchView.11=Aktuelles Archiv
