It's GSF, not android id.

--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -5,7 +5,7 @@ DownloadView.2=Open
 DownloadView.7=Complete
 DownloadView.8=Not paid for
 DownloadView.9=Error\!
-InitView.10=Android ID:
+InitView.10=GSF ID:
 InitView.11=http://www.onyxbits.de/faq/raccoon
 InitView.12=Bad credentials
 InitView.13=Login... (Please wait)
