--- a/src/main/resources/rsrc/messages_pl.properties
+++ b/src/main/resources/rsrc/messages_pl.properties
@@ -5,7 +5,7 @@ DownloadView.2=Otwórz
 DownloadView.7=Ukończono
 DownloadView.8=Nie zapłacono za
 DownloadView.9=Błąd\!
-InitView.10=Android ID:
+InitView.10=GSF ID:
 InitView.11=http://www.onyxbits.de/faq/raccoon
 InitView.12=Złe dane logowania
 InitView.13=Logowanie... (Proszę czekać.)
