Give the user pointers what to do if apps are missing

--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -88,6 +88,7 @@ SearchView.1=Gespeicherte Apps
 SearchView.11=Aktuelles Archiv
 SearchWorker.1=Passwortfehler
 SearchWorker.2=Keine Updates
-SearchWorker.3=Keine Ergebnisse
+SearchWorker.3=Keine Ergebnisse. <a href="http://www.onyxbits.de/content/what-do-if-you-cannot-find-app-raccoon">Warum</a>?
 SearchWorker.4=Suche angehalten
 SearchWorker.5=Surche unterbrochen
+SearchWorker.6=<p><div align="right"><a href="http://www.onyxbits.de/content/what-do-if-you-cannot-find-app-raccoon">Apps fehlen?</a></div>
