--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -96,6 +96,7 @@ SearchView.7=Overwrite file?
 SearchView.8=File exists
 SearchWorker.1=Authentication error
 SearchWorker.2=No updates
-SearchWorker.3=No results
+SearchWorker.3=No results. <a href="http://www.onyxbits.de/content/what-do-if-you-cannot-find-app-raccoon">Why?</a>
 SearchWorker.4=Search cancelled
 SearchWorker.5=Search interrupted
+SearchWorker.6=<p><div align="right"><a href="http://www.onyxbits.de/content/what-do-if-you-cannot-find-app-raccoon">Apps missing?</a></div>
