Added a user feedback dialog

--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -100,3 +100,8 @@ SearchWorker.3=No results. <a href="http://www.onyxbits.de/content/what-do-if-yo
 SearchWorker.4=Search cancelled
 SearchWorker.5=Search interrupted
 SearchWorker.6=<p><div align="right"><a href="http://www.onyxbits.de/content/what-do-if-you-cannot-find-app-raccoon">Apps missing?</a></div>
+Feedback.title=Feedback
+Feedback.message=Hi, it seems like Raccoon is of value to you.\nWould you like to help making it even better?
+Feedback.yes=Sure!
+Feedback.no=No thanks
+Feedback.later=Later
