--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -92,3 +92,8 @@ SearchWorker.3=Keine Ergebnisse. <a href="http://www.onyxbits.de/content/what-do
 SearchWorker.4=Suche angehalten
 SearchWorker.5=Surche unterbrochen
 SearchWorker.6=<p><div align="right"><a href="http://www.onyxbits.de/content/what-do-if-you-cannot-find-app-raccoon">Apps fehlen?</a></div>
+Feedback.title=Feedback
+Feedback.message=Finden Sie Raccoon n\u00FCtzlich und w\u00FCrden Sie gerne helfen,\ndas Programm noch besser zu machen?
+Feedback.yes=Sicher!
+Feedback.no=Nein danke
+Feedback.later=Sp\u00E4ter
