Changed Behavior: clarified on the initview that the GSF ID is optional and can be auto created.

--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -15,6 +15,9 @@ InitView.6=<html>This archive needs to be linked to a Google account and a devic
 InitView.7=Credentials
 InitView.8=Username:
 InitView.9=Password:
+InitView.14=Create new
+InitView.15=Use existing
+InitView.16=<generated>
 MainActivity.0=alt F
 MainActivity.1=File
 MainActivity.10=Contents
