--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -14,6 +14,9 @@ InitView.6=<html>Dieses Archiv muss mit einem Google Konto verbunden werden. Ben
 InitView.7=Zugangsdaten
 InitView.8=Benutzername:
 InitView.9=Passwort:
+InitView.14=Neue
+InitView.15=Bestehende
+InitView.16=<automatisch erstellt>
 MainActivity.0=alt D
 MainActivity.1=Datei
 MainActivity.10=Inhalt
