--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -11,7 +11,7 @@ InitView.12=Bad credentials
 InitView.13=Login... (Please wait)
 InitView.4=Login
 InitView.5=Help
-InitView.6=<html>This archive needs to be linked to a Google account and a device. The Google account is required, the device ID will automatically be generated if none is given and a pseudo device will be linked to the account. Press 'Help' for details.</html>
+InitView.6=<html>This archive needs to be linked to a Google account and a device. For privacy reasons, it is suggested to use a throw away account and let Raccoon create the GSF ID. Press 'Help' for details.</html>
 InitView.7=Credentials
 InitView.8=Username:
 InitView.9=Password:
