Make logging in with fresh accounts possible again.

--- a/src/main/resources/rsrc/messages.properties
+++ b/src/main/resources/rsrc/messages.properties
@@ -11,7 +11,7 @@ InitView.12=Bad credentials
 InitView.13=Login... (Please wait)
 InitView.4=Login
 InitView.5=Help
-InitView.6=<html>This archive needs to be linked to a Google account and a device. For privacy reasons, it is suggested to use a throw away account and let Raccoon create the GSF ID. Press 'Help' for details.</html>
+InitView.6=<html>This archive needs to be linked to a Google account and a device. For privacy reasons, it is suggested to use a throw away account and let Raccoon create the GSF ID. Press 'Help' for details.<p><strong>Important:</strong>The account you use must have created via the Google Play website (or at least been logged in there once). Otherwise it can't be used as you haven't accepted the Play TOS.</html>
 InitView.7=Credentials
 InitView.8=Username:
 InitView.9=Password:
