--- a/src/main/resources/rsrc/messages_de.properties
+++ b/src/main/resources/rsrc/messages_de.properties
@@ -10,7 +10,7 @@ InitView.12=Falsche Zugangsdaten
 InitView.13=Login... (Bitte warten)
 InitView.4=Login
 InitView.5=Hilfe
-InitView.6=<html>Dieses Archiv muss mit einem Google Konto verbunden werden. Benutzername und Passwort werden ben\u00F6tigt, die GSF ID ist optional. Wenn leer, dann erzeugt Raccoon eine neue ID und f&uuml;gt dem Konto ein Pseudoger&auml;t bei (siehe Hilfe).</html>
+InitView.6=<html>Dieses Archiv muss mit einem Google Konto verbunden werden. Benutzername und Passwort werden ben\u00F6tigt, die GSF ID ist optional. Wenn leer, dann erzeugt Raccoon eine neue ID und f&uuml;gt dem Konto ein Pseudoger&auml;t bei (siehe Hilfe).<p><strong>WICHTIG:</strong>Das Konto muss über die Google Play website erstellt (oder zumindest dort einmal eingelogt) worden sein um die Play AGB zu bestätigen. </html>
 InitView.7=Zugangsdaten
 InitView.8=Benutzername:
 InitView.9=Passwort:
